add calculate